Fixes #94: Fix search checkbox alignment in facets.

--- a/web/themes/jeffgeerling/css/search.css
+++ b/web/themes/jeffgeerling/css/search.css
@@ -79,6 +79,10 @@ ol.search-results {
   list-style: none;
 }
 
+.block-facets li.facet-item .facets-checkbox {
+  margin-right: 5px;
+}
+
 .block-facets li.facet-item,
 .block-facets li.facet-item label {
   cursor: pointer;
